# benchmarks

./: Cargo.toml  README.md  fleek.json
.github/workflows/: fleek-deploy.yaml  github-deploy.yaml
benches/: bitwise.rs  blake3.rs  ec.rs  hash.rs  io_tokio.rs  matmul.rs  rand.rs  xor.rs
src/: lib.rs
