[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Ark ecosystem
ark-ec = "0.4"
ark-secp256k1 = "0.4"
ark-secp256r1 = "0.4"
ark-bls12-381 = "0.4"
ark-ff = "0.4"
ark-std = "0.4"

# elliptic-curve ecosystem
k256 = { version="0.12", default-features = false, features = ["arithmetic", "hash2curve", "expose-field"] }
p256 = { version="0.12", default-features = false, features = ["arithmetic", "hash2curve", "expose-field"] }
elliptic-curve = { version="0.12" , default-features=false, features=["hash2curve", "arithmetic"]}
bls12_381 = "0.8"
ff = "0.13"

# Hashing functions
blake3 = {version="1.3", features=["rayon"]}
sha2 = "0.10"

# Random number generation
fastrand = "1.9.0"
rand_chacha = "0.3.1"
rand_hc = "0.3.1"
rand_xorshift = "0.3.0"
rand_xoshiro = "0.6.0"
rand_isaac = "0.3.0"
rand_jitter = "0.3.0"
rand_core_5 = { package="rand_core", version="0.5.1" } # for jitter

# Common
rand = "0.8"
rand_core = "0.6.4"
humansize = "2.1.3"

[dev-dependencies]
criterion = {version="0.4.0", features=["html_reports"]}

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "ec"
harness = false

[[bench]]
name = "rand"
harness = false

[[bench]]
name = "bitwise"
harness = false
