[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Ark ecosystem
ark-ec = "0.4"
ark-secp256k1 = "0.4"
ark-secp256r1 = "0.4"
ark-bls12-381 = "0.4"
ark-curve25519 = "0.4"
ark-ff = "0.4"
ark-std = "0.4"

# Non Ark curves
k256 = { version="0.12", default-features = false, features = ["arithmetic", "hash2curve", "expose-field"] }
p256 = { version="0.12", default-features = false, features = ["arithmetic", "hash2curve", "expose-field"] }
bls12_381 = "0.8"
blst = "0.3.10"

# Hashing functions
blake3 = {version="1.3", features=["rayon"]}
sha2 = "0.10"

# Random number generation
fastrand = "1.9.0"
rand_chacha = "0.3.1"
rand_hc = "0.3.1"
rand_xorshift = "0.3.0"
rand_xoshiro = "0.6.0"
rand_isaac = "0.3.0"

# Common
rand = "0.8"
rand_core = "0.6.4"
humansize = "2.1.3"

# Matrix multiplication
ndarray = "0.15"
ndarray-rand = "0.14.0"

# general stuff.
elliptic-curve = { version="0.12" , default-features=false, features=["hash2curve", "arithmetic"]}
ff = "0.13"
packed_simd = { version = "0.3.8", package = "packed_simd_2" }
ppv-lite86 = "0.2"

# IO
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[dev-dependencies]
criterion = {version="0.4.0", features=["html_reports", "async_tokio"]}

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "ec"
harness = false

[[bench]]
name = "rand"
harness = false

[[bench]]
name = "xor"
harness = false

[[bench]]
name = "blake3"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "io_tokio"
harness = false
